tests/feature_tests/snapshots/e2e__feature_tests__alias_system__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"

---
set -e
eval "$(fnm env)"
fnm alias system my_system
fnm ls | grep my_system
fnm alias system default
fnm alias my_system my_system2
fnm ls | grep my_system2
fnm use my_system | grep 'Bypassing fnm'
fnm unalias my_system
fnm use my_system 2>&1 | grep 'Requested version my_system is not currently installed'
